# wasm-learning

./: .gitignore  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: latest_rustc.yml  main.yml
android/: README.md  birds_v1.wasm  test.c
browser/: README.md  hello.md  triple.md
browser/hello/: README.md
browser/triple/: Cargo.toml  README.md
cli/add/: Cargo.toml  README.md
cli/classify_yml/: Cargo.toml  README.md
cli/classify_yml/config/: animal.yml  bird.yml  food.yml
cli/classify_yml/src/: main.rs
cli/hello/: Cargo.toml  README.md
cli/tflite/: Cargo.toml  README.md  README.txt
cli/wasi/: Cargo.toml  README-zh.md  README.md  wasi_example_main.wasm
deno/functions/: Cargo.toml  README.md
deno/functions/deno/: test.ts
deno/hello/: README.md
deno/wasi/: Cargo.toml  README.md
faas/an-image-processing-jamstack-demo/: README.md
faas/base64/: Cargo.toml  README.md
faas/cumulative-storage/: Cargo.toml  README.md
faas/email/: Cargo.toml  README.md
faas/email-form/: README.md
faas/find-anagrams/: Cargo.toml  README.md
faas/hello/: README.md
faas/hello-callback/: Cargo.toml  README.md
faas/hello-context/: README.md
faas/hello-storage/: Cargo.toml  README.md
faas/hello-storage/src/: lib.rs
faas/hello-watermark/: Cargo.toml  README.md
faas/image-brighten/: Cargo.toml  README.md
faas/image-flip/: Cargo.toml  README.md
faas/image-grayscale/: Cargo.toml  README.md
faas/image-recognition/: Cargo.toml  README.md
faas/image-recognition/src/: lib.rs
faas/image-recognition/test/: test.js
faas/image-rotate/: Cargo.toml  README.md  index.js
faas/image-rotate-180/: Cargo.toml  README.md
faas/image-rotate-270/: Cargo.toml  README.md
faas/image-rotate-90/: Cargo.toml  README.md
faas/image-rotate/html/: index.html
faas/image-rotate/src/: lib.rs
faas/image-rotate/test/: test.js
faas/image-thumbnail/: Cargo.toml  README.md
faas/language-translation/: Cargo.toml  README.md
faas/meme/: Cargo.toml
faas/mobilenet/: Cargo.toml  README.md
faas/mobilenet/html/: index.html
faas/mobilenet/src/: lib.rs
faas/mobilenet/test/: test.js
faas/mobilenet_birds/: README.md
faas/mobilenet_cars/: Cargo.toml  README.md
faas/mobilenet_food/: Cargo.toml  README.md
faas/mobilenet_insects/: README.md
faas/mobilenet_plants/: Cargo.toml  README.md
faas/mtcnn/: Cargo.toml  README.md
faas/mtcnn/html/: index.html
faas/mtcnn/src/: lib.rs
faas/mtcnn/test/: test.js  wasmedge_test.js
faas/ocr/: Cargo.toml  README.md
faas/paddlepaddleocr/: Cargo.toml  README.md  README.me  index.html
faas/paddlepaddleocr/src/: lib.rs
faas/paddlepaddleocr/test/: test.js
faas/poster/: Cargo.toml  README.md
faas/poster/src/: lib.rs  main.rs
faas/poster/test/: test.js
faas/regex/: Cargo.toml  README.md
faas/search-bytes/: Cargo.toml  README.md
faas/ssd/: Cargo.toml  README.md
faas/ssd_mobilenet/: Cargo.toml  README.md
faas/tf_lite_natural_language/: Cargo.toml  README.md
faas/tf_lite_natural_language/html/: index.html
faas/tf_lite_natural_language/src/: labelmap_v2.txt  lib.rs  model.tflite  prepare_data.py
faas/tflite_food/: Cargo.toml  README.md
faas/tflite_food/html/: index.html
faas/tflite_food/src/: lib.rs
faas/tflite_food/test/: test.js
faas/tflite_ssd/: Cargo.toml  README.md
faas/video_inference/: README.md
faas/watermark/: Cargo.toml  README.md
faas/yolo-tflite/: README.md
faas/yolov5-tflite/: Cargo.toml  README.md
faas/yolov5-tflite/src/: lib.rs
nodejs/: functions.md  hello.md  kmeans.md  rsa_example.md
nodejs/algos/: Cargo.toml  README.md
nodejs/algos/node/: iris.csv  iris_values.data.csv  server.js  svm.data.csv  svm_values.data.csv  test.js  test2.js  training.csv  training_svm.csv
nodejs/algos/node/public/: dbscan.html  glm.html  gmm.html  index.html  iris_svm_values.data.csv  kmeans.html  lin_reg.html  log_reg.html  nb.html  nnet.html  pca.html  svm.html
nodejs/algos/src/: lib.rs
nodejs/dockerfile-centos7/: Dockerfile
nodejs/dockerfile-ubuntu/: Dockerfile
nodejs/email/: README.md
nodejs/face_detect_service/: Cargo.toml  README.md
nodejs/functions/: Cargo.toml  README.md
nodejs/hello/: .gitignore  Cargo.toml  README.md
nodejs/hello-v8/: Cargo.toml  README.md
nodejs/kmeans/: Cargo.toml  README.md
nodejs/kmeans/node/: app.js  app_deno.js  dim128.data.csv  s1.data.csv
nodejs/kmeans/src/: lib.rs
nodejs/ml/: Cargo.toml  README.md
nodejs/ml/node/: server.js  test.js
nodejs/ml/node/public/: birch3.data.csv  index.html
nodejs/ml/src/: lib.rs
nodejs/nodejs_api/: Cargo.toml  README.md
nodejs/nodejs_api/node/: app.js  date-helper.js  request-helper.js  sqlite-helper.js
nodejs/nodejs_api/src/: console.rs  date.rs  fs.rs  lib.rs  request.rs  sqlite3.rs
nodejs/nodejs_example/: Cargo.toml  README.md
nodejs/nodejs_example/node/: app.js  cleanup.js  date.js  db.js  http.js  image.js
nodejs/nodejs_example/src/: lib.rs
nodejs/recrypt_example/: .gitignore  Cargo.toml  README.md
nodejs/recrypt_example/node/: app.js
nodejs/recrypt_example/src/: lib.rs
nodejs/rsa_example/: Cargo.toml  README.md
nodejs/rsa_example/node/: app.js  app_jsencrypt.js  rsa_example_lib.js  rsa_example_lib_bg.wasm
nodejs/rsa_example/src/: lib.rs
nodejs/storage/: Cargo.toml  README.md
nodejs/storage/node/: app.js
nodejs/storage/src/: lib.rs
rust/: cli.md  hello.md
rust/mtcnn/: Cargo.toml  README.md
rust/mtcnn/src/: main.rs
rust/ssd_fpnlite/: Cargo.toml  README.md
rust/ssd_fpnlite/src/: main.rs
rust/wasm_flatten_img/: Cargo.toml  README.md
rust/wasm_flatten_img/src/: main.rs
rust/yolo3/: Cargo.toml  README.md  关于ssvm与yolo的几点浅见.md
rust/yolo3/src/: main.rs
ssvm/rust-rsa-example/: .gitignore  Cargo.toml  README.md  app.js  lib.js
ssvm/rust-rsa-example/src/: main.rs
tencentcloud/poster/: .env  Cargo.toml  README-en.md  README.md
tencentcloud/poster/scf/: bootstrap  serverless.yml  ssvm
tencentcloud/poster/src/: main.rs
tencentcloud/poster/website/: serverless.yml
tencentcloud/poster/website/content/: index-en.html  index.html
(+326 files in other folders)
