[package]
name = "hello-storage"
version = "0.1.0"
authors = ["tpmccallum <mistermac2008@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "hello_storage"
path = "src/lib.rs"
crate-type =["cdylib"]

[dependencies]
wasm-bindgen = "=0.2.61"
rust_storage_interface_library = "^0.1"

