[package]
name = "watermark"
version = "0.1.0"
authors = ["ubuntu"]
edition = "2018"

[lib]
name = "watermark_lib"
path = "src/lib.rs"
crate-type =["cdylib"]

[dependencies]
image = { version = "0.23.0", default-features = false, features = ["jpeg", "png", "gif"] }
imageproc = "=0.21.0"
rusttype = "=0.9.2"
wasm-bindgen = "=0.2.61"
