[package]
name = "mobilenet_service"
version = "0.1.0"
authors = ["Michael Yuan <michael@secondstate.io>"]
edition = "2018"

[lib]
name = "tf_lite_natural_language"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "=0.2.61"
ssvm_tensorflow_interface = "^0.1.3"
serde = { version = "^1.0.59", features = ["derive"] }
serde_json = "^1.0.51"
