[package]
name = "yolo_tflite"
version = "0.1.0"
authors = ["Michael Yuan <michael@secondstate.io>"]
edition = "2018"

[lib]
name = "yolo_tflite_lib"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "=0.2.61"
ssvm_tensorflow_interface = "^0.1.3"
image = { version = "0.23.0", default-features = false, features = ["jpeg", "png", "gif"] }
imageproc = "0.21.0"
serde = { version = "^1.0.59", features = ["derive"] }
serde_json = "^1.0.51"