[package]
name = "algos"
version = "0.1.0"
authors = ["ubuntu"]
edition = "2018"

[lib]
name = "algos_lib"
path = "src/lib.rs"
crate-type =["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = "=0.2.61"
tera = "1.2.0"
serde_json = "=1.0.44"
csv = "1.1.3"
rusty-machine = {path = "../deps/rusty_machine"}
