[package]
name = "algos"
version = "0.1.0"
authors = ["ubuntu"]
edition = "2018"

[lib]
name = "algos_lib"
path = "src/lib.rs"
crate-type =["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "=1.0.44"
wasm-bindgen = "=0.2.61"
tera = "1.2.0"
csv = "1.1.3"
rusty-machine = {git = "https://github.com/second-state/wasm-learning-deps-rusty-machine"}
