[package]
name = "kmeans"
version = "0.1.0"
authors = ["ubuntu"]
edition = "2018"

[lib]
name = "kmeans_lib"
path = "src/lib.rs"
crate-type =["cdylib"]

[dependencies]
linfa-clustering = "0.1.0"
ndarray = "0.13.0"
ndarray-rand = "0.11.0"
rand_isaac = "0.2.0"
approx = "0.3.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2.60"
