[package]
name = "kmeans"
version = "0.1.0"
authors = ["Michael Yuan <michael@secondstate.io>"]
edition = "2018"

[lib]
name = "kmeans_lib"
path = "src/lib.rs"
crate-type =["cdylib"]

[dependencies]
rkm = { path = "../deps/rkm" }
ndarray = { version = "0.13.0", features = ["serde"] }
rand = { version = "0.7.3", features = ["wasm-bindgen"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.1.3"
plotters = "0.2.12"
wasm-bindgen = "=0.2.61"
nodejs-helper = "0.0.3"
