[package]
name = "nodejs_api"
version = "0.1.0"
authors = ["Shishuo Wang", "Michael Yuan"]
edition = "2018"

[lib]
name = "nodejs_api"
path = "src/lib.rs"
crate-type =["cdylib"]

[dependencies]
wasm-bindgen = { version="=0.2.61", features=["serde-serialize"] }
serde = "^1.0.59"
serde_derive = "^1.0.59"
serde_json = "^1.0.51"
image = "0.23.0"
