[package]
name = "recrypt_example"
version = "0.1.0"
authors = ["tpmccallum <mistermac2008@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "recrypt_example_lib"
path = "src/lib.rs"
crate-type =["cdylib"]

[dependencies]
stdweb = "0.4.20"
wasm-bindgen-cli-support = "0.2.60"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
wasm-bindgen = "^0.2"
# This dependency can be updated to the standard crates.io version once the changes are merged into recrypt
recrypt = { git= "https://github.com/tpmccallum/recrypt-rs", branch = "optional_serde_feature", version = "~0.11.0", features = ["wasm", "serde"], default-features = false }
~                   
