[package]
name = "rsa_example"
version = "0.1.0"
authors = ["ubuntu"]
edition = "2018"

[lib]
name = "rsa_example_lib"
path = "src/lib.rs"
crate-type =["cdylib"]

[dependencies]
rand = { version = "0.7.3", features = ["wasm-bindgen"] }
rsa = { version = "0.2.0", features = ["serde1"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "=0.2.61"
