[package]
name = "storage"
version = "0.1.0"
authors = ["ubuntu"]
edition = "2018"

[lib]
name = "storage_lib"
path = "src/lib.rs"
crate-type =["cdylib"]

[dependencies]
wasm-bindgen = "=0.2.61"
rust_storage_interface_library = "^0.1"
serde = { version = "^1.0", features = ["derive"] }
serialize_deserialize_u8_i32 = "^0.1"
