[package]
name = "ssd_fpnlite"
version = "0.1.0"
authors = ["YiYing He <yiying@secondstate.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ssvm_tensorflow_interface = "^0.1.1"
image = { version = "0.23.0", default-features = false, features = ["jpeg", "png", "gif"] }
imageproc = "0.21.0"
