[package]
name = "wasm_flatten_img"
version = "0.1.0"
authors = ["YiYing He <yiying@secondstate.io>"]
edition = "2018"

[dependencies]
wasm-bindgen = "=0.2.61"
rust_process_interface_library = "0.1.2"
image = { version = "0.23.0", default-features = false, features = ["jpeg", "png", "gif"] }
imageproc = "0.21.0"
serde = { version = "^1.0.59", features = ["derive"] }
serde_json = "^1.0.51"
