[package]
name = "yolo"
version = "0.1.0"
authors = ["azureuser"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.0"
tch = { version = "0.4.0", path = "../tch" }
anyhow = "1.0"
bzip2-sys = "0.1.10+1.0.8"
[dev-dependencies]
torch-sys = {version="0.4.0", path="../tch-rs/torch-sys"}
