[package]
name = "rust-rsa-example"
version = "0.1.0"
authors = ["hydai <hydai@secondstate.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
rsa = { version = "0.2.0", features = ["serde1"] }
serde = { version = "1.0.110", features = ["derive"] }
serde_json = "1.0.53"
clap = "2.33.1"
