[package]
name = "scf"
version = "0.1.0"
authors = ["Michael Yuan <michael@secondstate.io>"]
edition = "2018"

[dependencies]
wasm-bindgen = "=0.2.61"
base64 = "0.12.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "=1.0.44"
image = { version = "0.23.0", default-features = false, features = ["jpeg", "png", "gif"] }
imageproc = "=0.21.0"
rusttype = "=0.9.2"
